# onnxruntime_resnet

./: CMakeLists.txt  README.md  main  main.cpp
